# Allegiance

./: CMakeLists.txt
VS2017/: Allegiance.vcxproj  ClintLib.vcxproj  Ui.vcxproj  Utility.vcxproj  ZLibrary.vcxproj  training.vcxproj
src/: CMakeLists.txt
src/AGC/: AGCGameParameters.cpp  pch.h
src/AllSrvUI/: StdAfx.h
src/AutoUpdate/: pch.h
src/FedSrv/: FedSrv.H  pch.h  srvqueries.h
src/Igc/: missionigc.cpp  sounds.h
src/Inc/: Messages.h  allegdb.h  messagecore.h
src/Pigs/PigAccts/: pch.h
src/Pigs/PigConfig/: pch.h
src/Pigs/PigSrv/: pch.h
src/Pigs/PigsLib/: pch.h
src/Reloader/: Reloader.cpp
src/WinTrek/: CMakeLists.txt  CallsignTagInfo.cpp  CallsignTagInfo.h  CharInfoScreen.cpp  CreateGameDialog.h  PostTrainingSlideshow.cpp  Slideshow.cpp  Slideshow.h  SquadsScreen.cpp  SteamClans.cpp  SteamClans.h  TrainingSlideshow.cpp  Treki.h  WinTrek.cpp  WinTrek.h  ZoneClubScreen.cpp  ZoneSquad.cpp  ZoneSquad.h  cdkeydialog.cpp  chatpane.cpp  cmdview.cpp  cmdview.h  console.cpp  console.h  consoledata.cpp  consoledata.h  ddstream.cpp  ddstream.h  ddvideo.cpp  gameoverscreen.cpp  gamescreen.cpp  gamestartingscreen.cpp  gametypes.cpp  gametypes.h  hangarscreen.cpp  indicator.cpp  indicator.h  introscreen.cpp  inventoryimage.cpp  leaderboardscreen.cpp  (+36 more)
src/_Utility/: CMakeLists.txt  CRC.cpp  CollisionEntry.cpp  CollisionQueue.cpp  Endpoint.cpp  HitTest.cpp  KDnode.cpp  KDroot.cpp  Messages.cpp  Utility.cpp  allegdb.cpp  listwrappers.h
src/clintlib/: AutoDownload.cpp  CMakeLists.txt  appmsg.cpp  badwords.cpp  badwords.h  clintlib.cpp  clintlib.h  pch.h
src/engine/: CMakeLists.txt  DX9PackFile.cpp  imagetransform.h  modeler.cpp  valuetransform.cpp  valuetransform.h
src/lobby/: lobbyapp.cpp  lobbyapp.h  pch.h
src/mdlc/: pch.h
src/mdledit/: pch.h
src/soundengine/: soundengine.h  soundtemplates.h
src/test/TCLib/: WinApp.h  pch.h
src/test/TCObj/: pch.h
src/training/: AbstractTarget.cpp  AbstractTarget.h  Action.cpp  CMakeLists.txt  CommandAcknowledgedCondition.cpp  Condition.cpp  CreateDroneAction.cpp  CreateDroneAction.h  CreateObjectAction.cpp  CreateObjectAction.h  CreateProbeAction.cpp  CreateProbeAction.h  CreateWaypointAction.cpp  CurrentTarget.cpp  CurrentTarget.h  DoDamageAction.cpp  DoDamageAction.h  DoDamageAdjustableAction.cpp  DoDamageAdjustableAction.h  GetAutopilotCondition.cpp  GetAutopilotCondition.h  GetChatCondition.cpp  GetChatCondition.h  GetCommandCondition.cpp  GetCommandCondition.h  GetControlActiveCondition.cpp  GetControlActiveCondition.h  GetKeyCondition.cpp  GetKeyCondition.h  GetPickedCondition.cpp  GetPickedCondition.h  GetProbeCountCondition.cpp  GetProbeCountCondition.h  GetRadarLODCondition.cpp  GetRadarLODCondition.h  GetSectorCondition.cpp  GetSectorCondition.h  GetShipHasAmmoCondition.cpp  GetShipHasAmmoCondition.h  GetShipHasCargoCondition.cpp  (+112 more)
src/ui/: CMakeLists.txt  UiEngine.cpp  UiEngine.h  UiState.h  items.hpp  ns_event.hpp  ns_file.hpp  ns_font.hpp  ns_image.hpp  ns_string.hpp  ui.h  ui_types.h
src/zlib/: CMakeLists.txt  FTPSession_unix.cpp  TlsValue.h  VersionInfo.h  VersionInfo_dummy.cpp  VersionInfo_msvc.cpp  Win32app.cpp  base.h  base_unix.cpp  base_win.cpp  color.cpp  color.h  main.h  mask.h  point.h  tref.h  window.h  zassert.h  zmath.cpp  zmath.h  zstring.cpp  zstring.h  ztime.cpp  ztime.h
