CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(Allegiance)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

OPTION(USE_STEAM "Use steam" OFF)

MACRO(SET_MODULE MODULE_NAME)
    ADD_DEFINITIONS(-D__MODULE__="${MODULE_NAME}")
    INCLUDE_DIRECTORIES(../Inc)
    IF (USE_STEAM)
        INCLUDE_DIRECTORIES(../Lib/steam)
    ELSE()
        ADD_DEFINITIONS(-DNO_STEAM)
    ENDIF()
ENDMACRO()


ADD_SUBDIRECTORY(src)
