SET(Allegiance_SRC
    CallsignTagInfo.cpp
    CharInfoScreen.cpp
    PostTrainingSlideshow.cpp
    Slideshow.cpp
    SquadsScreen.cpp
    SteamClans.cpp
    TrainingSlideshow.cpp
    WinTrek.cpp
    ZoneClubScreen.cpp
    ZoneSquad.cpp
    cdkeydialog.cpp
    chatpane.cpp
    cmdview.cpp
    console.cpp
    consoledata.cpp
    ddstream.cpp
    ddvideo.cpp
    gameoverscreen.cpp
    gamescreen.cpp
    gamesite.cpp
    gamestartingscreen.cpp
    gametypes.cpp
    hangarscreen.cpp
    indicator.cpp
    introscreen.cpp
    inventoryimage.cpp
    leaderboardscreen.cpp
    load.cpp
    loadout.cpp
    logon.cpp
    mappreview.cpp
    mappvmaker.cpp
    netinfo.cpp
    newgamescreen.cpp
    passworddialog.cpp
    pch.cpp
    radarimage.cpp
    sectormap.cpp
    selpane.cpp
    soundinit.cpp
    splashscreen.cpp
    teampane.cpp
    teamscreen.cpp
    teleportpane.cpp
    trainingscreen.cpp
    trekapp.cpp
    trekctrls.cpp
    trekigc.cpp
    trekinput.cpp
    trekmdl.cpp
    treksound.cpp
    videoscreen.cpp
    zoneeventsscreen.cpp
   )

SET(Allegiance_DEPS
    Zlib
    training
    Utility
    effect
    ClintLib
    Igc
    Engine
    SoundEngine
   )

ADD_EXECUTABLE(Allegiance ${Allegiance_SRC})
TARGET_LINK_LIBRARIES(Allegiance ${Allegiance_DEPS})
SET_PROPERTY(TARGET Allegiance PROPERTY CXX_STANDARD 14)
